<?xml version="1.0"?>
<package format="3">
  <name>hanyang_matching_process</name>
  <version>0.0.0</version>
  <description>The hanyang_matching_process package</description>
  <maintainer email="koras@korasrobotics.com">koras</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>Eigen</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <depend>hanyang_matching_msgs</depend>
  <!-- <depend>zivid_interfaces</depend> -->
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
