<?xml version="1.0"?>
<package format="3">
  <name>hanyang_sam_node</name>
  <version>0.1.0</version>
  <description>SAM ROS</description>

  <maintainer email="mwna@korasrobotics.com">Minwoo Na</maintainer>

  <license>MIT</license>

  <author email="mwna@korasrobotics.com">Minwoo Na</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vision_opencv</exec_depend>

  <export>
  <build_type>ament_cmake</build_type>
  </export>
  
</package>
